# Hitlog_Processing

./: .gitignore  Hitlog_Processing_Blog.html  Makefile  README.md  Sample_hitlog.xlsx  main.py  pyproject.toml  requirements.txt
data/: data_gen.py
data/logs/: hitlog_2025-10-27.csv
data/outputs/: influence_timestamp.csv  top_influential_articles_2025-10-27.csv
documents/: Solution_overview.pptx
notebooks/: data_exploration.ipynb
notebooks/solutions/: Directed_graph_with_variable_weights.ipynb  Freq_count_solution.ipynb  Graph_with_frozen_weights.ipynb
src/: main.py
src/nodes/: node.py
src/telegraph_ranker/: __init__.py  cli.py  domain.py  io_utils.py
src/telegraph_ranker/approaches/: __init__.py  graph_based.py  timestamp_based.py
src/telegraph_ranker/models/: node.py
tests/: conftest.py  test_cli.py
