[project]
name = "hitlog-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-analysis-tools>=1.6.2",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "uv>=0.9.5",
]
